implemented search, re-added footer

--- a/Ibm folder/index.html
+++ b/Ibm folder/index.html
@@ -41,11 +41,11 @@
 
             </div>
 
-            <div class='default_colors' id="search_bar">
+            <form class='default_colors' id="search_bar">
 
                 <input label='search bar' placeholder='Search movie title...' type="text">
 
-            </div>
+            </form>
 
         </div>
         <div></div>
@@ -186,19 +186,19 @@
 
 
 
-        <!-- <footer>
-    <div id="footer_home">
-      <div onclick="document.getElementById('scene_1').scrollIntoView({behavior: 'smooth'})">Home</div>
-    </div>
+        <footer>
+            <div id="footer_home">
+                <div onclick="document.getElementById('scene_1').scrollIntoView({behavior: 'smooth'})">Home</div>
+            </div>
 
-    <div id="footer_films_list">
-      <div>Films list</div>
-    </div>
+            <div id="footer_films_list">
+                <div>Films list</div>
+            </div>
 
-    <div id="footer_contact_us">
-      <div>Contact Us</div>
-    </div>
-  </footer> -->
+            <div id="footer_contact_us">
+                <div>Contact Us</div>
+            </div>
+        </footer>
 
 
 
